hphp/test/slow/list_assignment/assignment-to-this.php.expectf
Fatal error: Cannot re-assign $this in %s/test/slow/list_assignment/assignment-to-this.php on line 4